fix align-text admin

--- a/tg/media/default.css
+++ b/tg/media/default.css
@@ -125,6 +125,14 @@ a:hover {
 	text-align: right; 
 }
 
+.align-left { 
+	text-align: left; 
+}
+
+.align-center { 
+	text-align: center; 
+}
+
 img { border: none; }
 
 .img1 {
@@ -142,4 +150,6 @@ hr { display: none; }
 .hr1 {
 	height: 1px;
 }
+
+
 
