--- a/tg/static/default.css
+++ b/tg/static/default.css
@@ -125,6 +125,14 @@ a:hover {
 	text-align: right; 
 }
 
+.align-left { 
+	text-align: left; 
+}
+
+.align-center { 
+	text-align: center; 
+}
+
 img { border: none; }
 
 .img1 {
